# cxurity

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FetchLibs.cmake
res/: known_processes.csv
src/: cxuconfig.h  cxurity.h  main.cpp
src/app/: CMakeLists.txt  EntityApplication.cpp  EntityApplication.h
src/app/common/: OSUtil.h
src/common/: common.h  cxuconfig.h
src/entity/: CMakeLists.txt  CXUEntityApplication.cpp  DeviceInformation.cpp  DeviceInformation.h  Entity.cpp
src/entity/application/: CXUEntityApplication.cpp  DeviceInformation.cpp  Entity.cpp  EntityInformation.cpp  Process.cpp  ProcessFetcher.cpp  ProcessList.cpp  ProcessPool.cpp  UIPanel.cpp
src/entity/application/process/: Process.cpp  ProcessFetcher.cpp  ProcessList.cpp  ProcessPool.cpp
src/entity/application/src/: DeviceInformation.cpp  Entity.cpp  EntityInformation.cpp  Process.cpp  ProcessList.cpp  ProcessPool.cpp
src/entity/common/: Events.h
src/entity/data/: CMakeLists.txt  DataBase.cpp  DataBase.h  NetworkFetcher.cpp  NetworkFetcher.h  Process.cpp  Process.h  ProcessFetcher.cpp  ProcessFetcher.h  ProcessList.cpp  ProcessList.h  ProcessPool.cpp  ProcessPool.h  ProcessUpdater.cpp  ProcessUpdater.h  Snapshot.h
src/entity/data/common/: OSUtil.h
src/entity/device/: CMakeLists.txt  DeviceInformation.cpp  DeviceInformation.h  EntityInformation.cpp  EntityInformation.h  ProcessDetector.cpp  ProcessDetector.h
src/entity/ml/: AnomalyDetector.cpp  AnomalyDetector.h  AutoEncoder.cpp  AutoEncoder.h  CMakeLists.txt  ProcessDetector.cpp  ProcessDetector.h
src/entity/ui/: Dashboard.cpp  EntityUIRoot.cpp  NavigationPane.cpp  SidePanel.cpp  StatusBar.cpp  Tab.cpp  TabList.cpp  UIComponents.cpp  UserDisplay.cpp
src/headers/: Applications.h  DataCollection.h  Entity.h  GlobalState.h  MachineLearning.h  WindowsHeaders.h  pch.h
src/include/cxurity/: Entity.h  Logger.h  WindowsHeaders.h  Worker.h  common.h  cxuconfig.h
src/ui/: CMakeLists.txt  Dashboard.cpp  Dashboard.h  NavigationPane.cpp  NavigationPane.h  OSUtil.h  OverView.cpp  OverView.h  PanelContainer.cpp  PanelContainer.h  RaylibAddons.h  SidePanel.cpp  SidePanel.h  StatusBar.cpp  StatusBar.h  Tab.cpp  Tab.h  TabList.cpp  TabList.h  UICommon.h  UIComponent.cpp  UIComponent.h  UIPanel.cpp  UIPanel.h  UIRoot.cpp  UIRoot.h  UISettings.cpp  UISettings.h  UserDisplay.cpp  UserDisplay.h
src/ui/common/: OSUtil.h  RaylibAddons.h
src/ui/panels/: AnomalyCounter.cpp  AnomalyCounter.h
src/util/: OSHelper.h  Util.h  Worker.h  rayadditions.h
